--- a/bib/library.bib
+++ b/bib/library.bib
@@ -50,7 +50,7 @@
 }
 
 @misc{noauthor_inicio_nodate,
-	title = {Inicio - {Infoelectoral}},
+	title = {{Infoelectoral}},
 	url = {http://www.infoelectoral.mir.es/},
 	urldate = {2019-10-16}
 }
@@ -363,7 +363,7 @@ Existen dos métodos de cifra repartidora comúnmente utilizados: el método d'H
 }
 
 @misc{noauthor_pdf_nodate,
-	title = {({PDF}) {Rethinking} the {D}'{Hondt} method},
+	title = {{Rethinking} the {D}'{Hondt} method},
 	url = {https://www.researchgate.net/publication/334703296_Rethinking_the_D'Hondt_method},
 	abstract = {PDF {\textbar} The D'Hondt method is the most popular proportional apportionment procedure, as well as one of the oldest. Despite this, the method is not fully... {\textbar} Find, read and cite all the research you need on ResearchGate},
 	language = {en},
@@ -386,15 +386,14 @@ Library Catalog: www.researchgate.net}
 
 
 @misc{noauthor_42_nodate,
-	title = {4.2: {Hamilton}’s {Method} - {Mathematics} {LibreTexts}},
+	title = {{Hamilton}’s {Method} - {Mathematics} {LibreTexts}},
 	url = {https://math.libretexts.org/Bookshelves/Applied_Mathematics/Math_in_Society_(Lippman)/04%3A_Apportionment/4.02%3A_Hamiltons_Method},
 	urldate = {2021-05-01},
 	file = {4.2\: Hamilton’s Method - Mathematics LibreTexts:C\:\\Users\\paco1\\Zotero\\storage\\4MP5CGIB\\4.html:text/html}
 }
 
 @misc{noauthor_92_2020,
-	title = {9.2: {Apportionment} - {Jefferson}’s, {Adams}’s, and {Webster}’s {Methods}},
-	shorttitle = {9.2},
+	title = {{Apportionment} - {Jefferson}’s, {Adams}’s, and {Webster}’s {Methods}},
 	url = {https://math.libretexts.org/Bookshelves/Applied_Mathematics/Book%3A_College_Mathematics_for_Everyday_Life_(Inigo_et_al)/09%3A__Apportionment/9.02%3A_Apportionment_-_Jeffersons_Adamss_and_Websters_Methods},
 	abstract = {Jefferson\&rsquo;s, Adams\&rsquo;s, and Webster\&rsquo;s methods are all based on the idea of finding a divisor that will apportion all the seats under the appropriate rounding rule. There should be no …},
 	language = {en},
