--- a/capitulo04.tex
+++ b/capitulo04.tex
@@ -559,14 +559,14 @@ linewidth=4pt]{mBox}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 
-\hypertarget{elecciones-espauxf1olas-seguxfan-distintos-muxe9todos-de-reparto-de-escauxf1os.}{%
+\hypertarget{elecciones-espauxf1olas-seguxfan-distintos-muxe9todos-de-reparto-de-escauxf1os}{%
 \chapter{Elecciones españolas según distintos métodos de reparto de
-escaños.}\label{elecciones-espauxf1olas-seguxfan-distintos-muxe9todos-de-reparto-de-escauxf1os.}}
+escaños}\label{elecciones-espauxf1olas-seguxfan-distintos-muxe9todos-de-reparto-de-escauxf1os}}
 
 A continuación analizaremos el reparto de escaños para el congreso de
 las distintas elecciones en España desde el 1977. Aplicando diferentes
 métodos de reparto de escaños, analizaremos los resultados obtenidos en
-cada elección. Una vez obtenidos el reparto de escaños según los
+cada elección. Una vez obtenido el reparto de escaños según los
 distintos métodos procederemos a obtener la proporcionalidad para cada
 método y así analizar la desproporción tanto por comunidades autónomas
 como por España en su conjunto.
@@ -627,7 +627,7 @@ este modo:
 
 \begin{itemize}
 \item
-  Una vez obtenidos los resultados electorales y creado las funciones
+  Una vez obtenidos los resultados electorales y creadas las funciones
   necesarias, se procede a aplicar las funciones creadas con los
   resultados electorales.
 \item
@@ -647,8 +647,6 @@ obtenidos}\label{comparativa-de-asientos-obtenidos}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-5-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-5-2} \end{center}
-
 En estas primeras elecciones de 1977 podemos observar que la fuerza más
 votada en las elecciones es el partido \emph{Unión de Centro
 democrático} seguido del \emph{PSOE}. Observamos que según el método
@@ -657,12 +655,12 @@ las elecciones, tendría una gran diferencia de votos respecto a los
 demás partidos, por lo que facilitaría la gobernanza.
 
 Comparando entre métodos de reparto observamos que el que más escaños da
-a los partidos grandes es el método imperiali, que beneficia mucho a los
+a los partidos grandes es el método Imperiali, que beneficia mucho a los
 partidos más votados y penaliza mucho en escaños a los partidos tanto
 medianos como poco votados. El método actual en España también tiene un
 comportamiento similar al Imperiali aunque no tan acusado. En la otra
 parte de la balanza nos encontramos con el método Adams, el cual da muy
-pocos escaños al partidos más votado y a los partidos medianos les
+pocos escaños al partido más votado y a los partidos medianos les
 beneficia.
 
 En estas elecciones no se obtiene la mayoría absoluta en ningún método
@@ -702,7 +700,7 @@ desproporción se encuentran en el método Imperiali y Adams. Especial
 caso hacemos al método D´Hondt al ser el método utilizado actualmente en
 España, observamos que ni es el mejor método ni tampoco es de los
 peores, debido a ello sería conveniente cambiar el método de reparto a
-otro mejor, que podría ser o bien el Sainte-Lague,LR-Hare o el Danish.
+otro mejor, que podría ser o bien el Sainte-Lague, LR-Hare o el Danish.
 
 \hypertarget{auxf1o-1979}{%
 \section{Año 1979}\label{auxf1o-1979}}
@@ -713,9 +711,7 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-1}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-8-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-8-2} \end{center}
-
-En estas elecciones de 1979 el partido más votado fué \emph{UCD} seguido
+En estas elecciones de 1979 el partido más votado fue \emph{UCD} seguido
 del \emph{PSOE}, según los distintos métodos de reparto únicamente en el
 método Imperiali \emph{UCD} conseguiría la mayoría absoluta, en todos
 los demás métodos de reparto no se alcanza la mayoría absoluta, los
@@ -761,8 +757,6 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-2}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-11-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-11-2} \end{center}
-
 En estas elecciones de 1982 el partido más votado es el \emph{PSOE}, el
 cual según la mayoría de los métodos de reparto, incluido el método
 D´Hondt, alcanza la mayoría absoluta. Son unas elecciones en los que el
@@ -804,9 +798,7 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-3}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-14-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-14-2} \end{center}
-
-En estas elecciones de 1986 el partido más votado fué el \emph{PSOE},
+En estas elecciones de 1986 el partido más votado fue el \emph{PSOE},
 tal y como sucedió en las anteriores elecciones, son también unas
 elecciones en donde hay únicamente dos partidos mayoritarios,
 \emph{PSOE} y \emph{Coalición Popular}, ocurre en estas elecciones el
@@ -852,9 +844,7 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-4}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-17-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-17-2} \end{center}
-
-En estas elecciones de 1989 el partido más votado es, como sucedió el
+En estas elecciones de 1989 el partido más votado es, como sucedió en
 las anteriores elecciones, el \emph{PSOE}, vemos como aparece por
 primera vez el \emph{Partido Popular} como segunda fuerza tomando el
 puesto que antes tenía \emph{Coalición Popular}, estas elecciones
@@ -897,8 +887,6 @@ a ser el Danish aunque le sigue muy cerca el método Sainte-Lague.
 obtenidos}\label{comparativa-de-asientos-obtenidos-5}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-20-1} \end{center}
-
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-20-2} \end{center}
 
 En las elecciones de 1993 podemos observar como la fuerza del primer
 partido va decreciendo lentamente. Los dos partidos más votados son el
@@ -948,12 +936,10 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-6}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-23-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-23-2} \end{center}
-
 En estas elecciones de 1996 son las primeras elecciones en donde el
 \emph{PP} es la fuerza más votada, el \emph{PSOE} que ya llevaba una
 tendencia descendiente a lo largo de las últimas elecciones al final
-pierde el primer puesto a favor del \emph{PP}. Sigue presentandose un
+pierde el primer puesto a favor del \emph{PP}. Sigue presentándose un
 bipartidismo significativo, seguidamente de dos partidos medianos,
 todavía el PP a pesar de ganar las elecciones no alcanza la mayoría
 absoluta en ninguno de los métodos analizados. Izquierda Unida sigue
@@ -994,10 +980,8 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-7}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-26-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-26-2} \end{center}
-
 En las elecciones del año 2000 el partido más votado vuelve a ser el
-\emph{Partido Popular} seguido del \emph{PSOE} .En estas elecciones,
+\emph{Partido Popular} seguido del \emph{PSOE}. En estas elecciones,
 según el método D´Hondt utilizado en España el \emph{PP} conseguiría una
 mayoría absoluta holgada, es una elección con un claro bipartidismo
 donde se podría decir que no existen partidos medianos. Si optásemos por
@@ -1040,8 +1024,6 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-8}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-29-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-29-2} \end{center}
-
 En estas elecciones del año 2004 volvemos a ver unas elecciones con un
 claro bipartidismo y con una diferencia de escaños entre partidos cada
 vez menor, en estas elecciones el partido más votado cambia y el
@@ -1049,7 +1031,7 @@ vez menor, en estas elecciones el partido más votado cambia y el
 la mayoría absoluta según D´Hont que tenía en las anteriores elecciones.
 En ningún método el \emph{PSOE} alcanzaría la mayoría absoluta por lo
 que deberá de realizar alianzas con otros partidos para así alcanzar la
-mayoría absoluta. En el caso de optar por los métodos mas proporcionales
+mayoría absoluta. En el caso de optar por los métodos más proporcionales
 resultaría en una reducción muy significativa de la diferencia de
 escaños entre partidos que pasaría de una diferencia de 16 escaños a 6
 escaños en el caso de optar por el método Danish. El partido más
@@ -1072,7 +1054,7 @@ comportamiento similar, un grupo donde se encuentran los métodos Adams,
 Huntington-Hill y LR-Imperiali, y en otro grupo los restantes. En el
 caso de agrupar la desproporción por métodos observamos que este año el
 método más desproporcionado es el Huntington-Hill, mientras que en la
-parte de los métodos mas proporcionados el método mejor sería el
+parte de los métodos más proporcionados el método mejor sería el
 LR-Imperiali, LR-Hare y Sainte-Lague. El método D´Hondt utilizado en
 España sigue siendo un método que se encuentra en un nivel medio, sin
 destacar por una desproporción alta ni baja entre todos los métodos.
@@ -1086,8 +1068,6 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-9}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-32-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-32-2} \end{center}
-
 En estos comicios del año 2008 no hay diferencias significativas en
 términos de escaños, sigue un claro bipartidismo con dos partidos
 hegemónicos, en primer lugar el más votado en estas elecciones que sigue
@@ -1097,7 +1077,7 @@ bipartidismo es cada vez más pronunciado, aumentando ambos partidos su
 presencia en el congreso. Para el partido más votado únicamente en dos
 casos podría obtener la mayoría absoluta, que sería en el caso de optar
 por el método Imperiali, una mayoría absoluta justa al llegar sólo a los
-175 escaños o bien por el métodos LR-Imperiali que alcanzaría los 180
+175 escaños o bien por el método LR-Imperiali que alcanzaría los 180
 escaños. Utilizando los métodos de reparto más proporcionales como son
 el Danish y el Sainte-Lague la diferencia entre los partidos más votados
 se reduciría a la vez que obtendrían un menor número de escaños, el
@@ -1112,18 +1092,18 @@ método Danish.
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-33-2} \end{center}
 
-Este es un año que se puede observar una mayor igualdad en el caso de
-las desproporciones, las comunidades no tienen una gran diferencia de
+Este es un año en el que se puede observar una mayor igualdad en el caso
+de las desproporciones, las comunidades no tienen una gran diferencia de
 proporcionalidad entre ellas sin contar con las habituales de Ceuta y
 Melilla, además no encontramos grandes diferencias entre los métodos.\\
 Si observamos la gráfica de la desproporción según el método de reparto,
 el método más despropocionado es el Imperiali, seguido por los métodos
-Adams y Huntington-Hill respectivamente. Todos los demás métodos están
-en un mismo nivel, el mejor método en estas elecciones es el método
-LR-Imperiali, que presenta una muy baja desproporción respecto a los
-demás métodos. El método D´Hont utilizado en España no presenta
-diferencias y se encuentra en un nivel medio-alto de desproporción entre
-todos los métodos analizados.
+Adams y Huntington-Hill. Todos los demás métodos están en un mismo
+nivel, el mejor método en estas elecciones es el método LR-Imperiali,
+que presenta una muy baja desproporción respecto a los demás métodos. El
+método D´Hont utilizado en España no presenta diferencias y se encuentra
+en un nivel medio-alto de desproporción entre todos los métodos
+analizados.
 
 \hypertarget{auxf1o-2011}{%
 \section{Año 2011}\label{auxf1o-2011}}
@@ -1133,8 +1113,6 @@ todos los métodos analizados.
 obtenidos}\label{comparativa-de-asientos-obtenidos-10}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-35-1} \end{center}
-
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-35-2} \end{center}
 
 Este año 2011 podemos considerarlo como el primer año en el que aunque
 continúe sucediendo un claro bipartidismo empiezan a surgir partidos
@@ -1191,9 +1169,7 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-11}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-38-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-38-2} \end{center}
-
-En estas elecciones del 2014 observamos que el bipartidismo que veíamos
+En estas elecciones del 2015 observamos que el bipartidismo que veíamos
 omnipresente en todas las elecciones anteriores ahora ya no ocurre, es
 el primer año en el que se puede afirmar que ya no hay un bipartidismo
 claro. El partido más votado es el \emph{Partido Popular} seguido por el
@@ -1207,7 +1183,7 @@ segundo, mientras que de haber utilizado el método Danish,
 de optar por el método Danish, el partido más votado, el \emph{PP},
 perdería bastantes escaños y su diferencia respecto al segundo se vería
 reducida significativamente. En el caso de los partidos medianos verían
-su presencia en el congreso aumentar levemente pero en ningún caso
+aumentar levemente su presencia en el congreso pero en ningún caso
 supondría un cambio significativo. El partido más perjudicado este año
 vuelve a ser \emph{Izquierda Unida}, que podría pasar de obtener 2
 escaños con el método D´Hondt a 11 escaños con el Danish.
@@ -1245,8 +1221,6 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-12}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-41-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-41-2} \end{center}
-
 En las elecciones del año 2016 vemos como se va consolidando el modelo
 de las anteriores elecciones, con dos grandes partidos y dos partidos
 medianos. La fuerza política más votada este año es el \emph{Partido
@@ -1259,8 +1233,8 @@ número de escaños para el \emph{PP} y una ligera subida de escaños de
 
 Son las primeras elecciones en donde el método de reparto no cambia
 significativamente el reparto de escaños, es notorio que en este año el
-\emph{PSOE} obtenga casi los mismos votos independientemente del método
-de reparti utilizado.
+\emph{PSOE} obtenga casi los mismos escaños independientemente del
+método de reparto utilizado.
 
 \hypertarget{desproporciuxf3n-12}{%
 \subsection{Desproporción}\label{desproporciuxf3n-12}}
@@ -1292,8 +1266,6 @@ obtenidos}\label{comparativa-de-asientos-obtenidos-13}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-44-1} \end{center}
 
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-44-2} \end{center}
-
 En estas elecciones de Abril de 2019 vemos como ya no existe el
 bipartidismo, este año podemos agrupar a los partidos políticos en
 cuatro categorías, la primera en donde hay un partido con muchos votos
@@ -1309,7 +1281,8 @@ partidos más perjudicados por la elección del método D´Hondt son
 alcanza la mayoría absoluta. De haber utilizado el método Danish el
 partido que se vería más beneficiado sería \emph{Vox} seguido de
 \emph{Ciudadanos}, partido que superaría en escaños al \emph{PP} y se
-convertiría en la segunda fuerza en el hemiciclo.
+convertiría en la segunda fuerza en el hemiciclo, igualmente sucedería
+con los métodos Adams y Huntington-Hill.
 
 \hypertarget{desproporciuxf3n-13}{%
 \subsection{Desproporción}\label{desproporciuxf3n-13}}
@@ -1321,15 +1294,15 @@ convertiría en la segunda fuerza en el hemiciclo.
 Este es un año en el que viendo la desproporción por comunidades es
 especialmente similar independientemente del método utilizado. En las
 ciudades de Ceuta y Melilla es donde encontramos la mayor desproporción,
-por otra parte la comunidad de Madrid es la provincia más proporcionada.
-
+por otra parte la comunidad de Madrid es la provincia más
+proporcionada.\\
 Cuando comparamos la proporcionalidad según el método de reparto sucede
 algo similar a las anteriores elecciones, en donde el método Imperiali
 se encuentra con una diferencia bastante significativa respecto a las
 demás. El método utilizado en España vuelve a ser uno de los peores, en
-estas elecciones baja un puesto hasta ser el tercero peor en términos de
-proporcionalidad, parece ser un método que no está preparado para ser
-óptimo en escenarios en donde no hay un bipartidismo claro.
+estas elecciones baja hasta ser el segundo peor en términos de
+proporcionalidad, es un método que no está preparado para ser óptimo en
+escenarios en donde no hay un bipartidismo claro.
 
 \hypertarget{auxf1o-2019-noviembre}{%
 \section{Año 2019, Noviembre}\label{auxf1o-2019-noviembre}}
@@ -1339,8 +1312,6 @@ proporcionalidad, parece ser un método que no está preparado para ser
 obtenidos}\label{comparativa-de-asientos-obtenidos-14}}
 
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-47-1} \end{center}
-
-\begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-47-2} \end{center}
 
 En esta gráfica de las elecciones de Noviembre de 2019 podemos observar
 una ligera recuperación del bipartidismo en donde los dos principales
@@ -1372,7 +1343,7 @@ más proporcionada.\\
 Cuando comparamos la desproporción según el método de reparto, el método
 Imperiali sigue siendo el más desproporcionado mientras que el mejor
 método esta vez resulta ser el LR-Hare y Sainte-Lague, el método D´Hondt
-como hemos visto en la anterior elección sigue siendo el tercer peor
+como hemos visto en la anterior elección sigue siendo el segundo peor
 método posible entre todos los analizados.
 
 \hypertarget{comparativa-entre-auxf1os}{%
@@ -1400,9 +1371,9 @@ se mantiene sin mucha variación.
 \begin{center}\includegraphics[width=1\linewidth]{figurasR/unnamed-chunk-50-1} \end{center}
 
 En el gráfico de la desproporción según el método de reparto podemos
-extraer conclusiones para decidir cual método ha sido el mejor a lo
-largo de todas las elecciones realizadas en España a partir de 1977, por
-lo tanto sacamos estas conclusiones:
+extraer conclusiones para decidir qué método ha sido el mejor a lo largo
+de todas las elecciones realizadas en España a partir de 1977, por lo
+tanto sacamos estas conclusiones:
 
 \begin{itemize}
 \tightlist
