--- a/portadas/latex_paginatitulo_modTFE.tex
+++ b/portadas/latex_paginatitulo_modTFE.tex
@@ -34,11 +34,16 @@
 \\[0.75cm]
 
 %\bfseries
-{\Huge
+{\LARGE
 \textbf{\textit{
-Influencia de los métodos \\[0.2cm]
-de reparto de escaños \\[0.5cm]
+Influencia de las delimitaciones \\[0.2cm]
+de las circunscripciones \\[0.5cm]
 en los resultados electorales
+}}}\\[0.3cm] 
+{\normalsize
+\textbf{\textit{
+( Un estudio de los métodos \\[0.2cm]
+de reparto de escaños)
 }}}\\[0.75cm] 
 
 \HRule \\[4cm]
@@ -46,7 +51,7 @@ en los resultados electorales
 
 {\Large
 
-Angel González Rizo} \\[0.5cm]
+Ángel González Rizo} \\[0.5cm]
 
 {\large
 Sevilla, Junio de 2021
