--- a/apendice01.Rmd
+++ b/apendice01.Rmd
@@ -70,7 +70,7 @@ knitr::opts_chunk$set(fig.path = 'figurasR/',
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 
-# Apéndice: Documentación
+# Documentación
 
 Se ha seguido como base para generar el trabajo la guía de Pedro L. Luque-Calvo: *Escribir un Trabajo Fin de Estudios con R Markdown*,  link:(<http://destio.us.es/calvo>) .
 
