--- a/capitulo04.Rmd
+++ b/capitulo04.Rmd
@@ -71,9 +71,9 @@ knitr::opts_chunk$set(
 \renewcommand{\footrulewidth}{0.4pt}
 
 
-# Elecciones españolas según distintos métodos de reparto de escaños.
+# Elecciones españolas según distintos métodos de reparto de escaños
 
-  A continuación analizaremos el reparto de escaños para el congreso de las distintas elecciones en España desde el 1977. Aplicando diferentes métodos de reparto de escaños, analizaremos los resultados obtenidos en cada elección. Una vez obtenidos el reparto de escaños según los distintos métodos procederemos a obtener la proporcionalidad para cada método y así analizar la desproporción tanto por comunidades autónomas como por España en su conjunto.
+  A continuación analizaremos el reparto de escaños para el congreso de las distintas elecciones en España desde el 1977. Aplicando diferentes métodos de reparto de escaños, analizaremos los resultados obtenidos en cada elección. Una vez obtenido el reparto de escaños según los distintos métodos procederemos a obtener la proporcionalidad para cada método y así analizar la desproporción tanto por comunidades autónomas como por España en su conjunto.
   
 ## Procedimiento
 
@@ -110,7 +110,7 @@ asientos_dhondt <- function(partidos, votos,
 }
 ```
 
-  - Una vez obtenidos los resultados electorales y creado las funciones necesarias, se procede a aplicar las funciones creadas con los resultados electorales.
+  - Una vez obtenidos los resultados electorales y creadas las funciones necesarias, se procede a aplicar las funciones creadas con los resultados electorales.
   
   - Creación de los gráficos y análisis de los resultados, tanto para el reparto de escaños como para los resultados de la desproporción por comunidades autónomas y España en su conjunto.
   
@@ -752,7 +752,7 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
@@ -760,7 +760,7 @@ votos_recap
 
 En estas primeras elecciones de 1977 podemos observar que la fuerza más votada en las elecciones es el partido *Unión de Centro democrático* seguido del *PSOE*. Observamos que según el método vigente en España, el método D´Hondt, el partido *UCD*, que ganaría las elecciones, tendría una gran diferencia de votos respecto a los demás partidos, por lo que facilitaría la gobernanza.  
 
-Comparando entre métodos de reparto observamos que el que más escaños da a los partidos grandes es el método imperiali, que beneficia mucho a los partidos más votados y penaliza mucho en escaños a los partidos tanto medianos como poco votados. El método actual en España también tiene un comportamiento similar al Imperiali aunque no tan acusado. En la otra parte de la balanza nos encontramos con el método Adams, el cual da muy pocos escaños al partidos más votado y a los partidos medianos les beneficia.  
+Comparando entre métodos de reparto observamos que el que más escaños da a los partidos grandes es el método Imperiali, que beneficia mucho a los partidos más votados y penaliza mucho en escaños a los partidos tanto medianos como poco votados. El método actual en España también tiene un comportamiento similar al Imperiali aunque no tan acusado. En la otra parte de la balanza nos encontramos con el método Adams, el cual da muy pocos escaños al partido más votado y a los partidos medianos les beneficia.  
 
 En estas elecciones no se obtiene la mayoría absoluta en ningún método excepto en el método Imperiali, en los demás métodos el partido ganador debería de aliarse con uno o más partidos para obtener la mayoría absoluta, los grandes perdedores en términos de escaños obtenidos son el partido comunista y Alianza Popular, que podrían obtener hasta 10 escaños más de haber optado por otro método de reparto de votos.  
 
@@ -807,7 +807,7 @@ En el presente gráfico, en el que se mide la desproporción por comunidades, ob
 En general los métodos que presentan una menor diferencia de desproporción entre las distintas comunidades autónomas son el método Danish, LR-Hare y el Saint-Lague, en cambio las que presentan una mayor diferencia entre comunidades son el método Imperiali, Adams y el Huntington-Hill.  
 
 
-Si nos centramos en el gráfico de la desproporción media según el método de reparto podemos observar que la menor desproporción se encuentra en los métodos LR-Hare, Danish y Sainte-Lague, mientras que la mayor desproporción se encuentran en el método Imperiali y Adams. Especial caso hacemos al método D´Hondt al ser el método utilizado actualmente en España, observamos que ni es el mejor método ni tampoco es de los peores, debido a ello sería conveniente cambiar el método de reparto a otro mejor, que podría ser o bien el Sainte-Lague,LR-Hare o el Danish.  
+Si nos centramos en el gráfico de la desproporción media según el método de reparto podemos observar que la menor desproporción se encuentra en los métodos LR-Hare, Danish y Sainte-Lague, mientras que la mayor desproporción se encuentran en el método Imperiali y Adams. Especial caso hacemos al método D´Hondt al ser el método utilizado actualmente en España, observamos que ni es el mejor método ni tampoco es de los peores, debido a ello sería conveniente cambiar el método de reparto a otro mejor, que podría ser o bien el Sainte-Lague, LR-Hare o el Danish.  
 
 ## Año 1979
 
@@ -894,11 +894,11 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
-En estas elecciones de 1979 el partido más votado fué *UCD* seguido del *PSOE*, según los distintos métodos de reparto únicamente en el método Imperiali *UCD* conseguiría la mayoría absoluta, en todos los demás métodos de reparto no se alcanza la mayoría absoluta, los partidos más castigados por utilizar el método D´Hondt son el partido comunista y coalición Democrática, que podrían hasta doblar el número de asientos obtenidos dependiendo del método de reparto que se haya realizado. En estas elecciones podemos decir que hay dos grandes partidos y dos medianos, UCD y el PSOE son los más grandes y el partido comunista y coalición democrática son los partidos medianos, después ya se encuentran todos los demás.
+En estas elecciones de 1979 el partido más votado fue *UCD* seguido del *PSOE*, según los distintos métodos de reparto únicamente en el método Imperiali *UCD* conseguiría la mayoría absoluta, en todos los demás métodos de reparto no se alcanza la mayoría absoluta, los partidos más castigados por utilizar el método D´Hondt son el partido comunista y coalición Democrática, que podrían hasta doblar el número de asientos obtenidos dependiendo del método de reparto que se haya realizado. En estas elecciones podemos decir que hay dos grandes partidos y dos medianos, UCD y el PSOE son los más grandes y el partido comunista y coalición democrática son los partidos medianos, después ya se encuentran todos los demás.
 
 ### Desproporción
 ```{r}
@@ -1025,7 +1025,7 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
@@ -1157,11 +1157,11 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
-En estas elecciones de 1986 el partido más votado fué el *PSOE*, tal y como sucedió en las anteriores elecciones, son también unas elecciones en donde hay únicamente dos partidos mayoritarios, *PSOE* y *Coalición Popular*, ocurre en estas elecciones el mismo escenario que en las anteriores elecciones, en donde el primer partido casi dobla en escaños al segundo partido, aunque en este caso ya se puede apreciar que la diferencia se va reduciendo entre los dos grandes partidos, en general el PSOE alcanza la mayoría absoluta pero en este año si utilizásemos los métodos más proporcionados es interesante observar como perdería la mayoría absoluta tanto utilizando el método Danish como el Sainte-Lague.  
+En estas elecciones de 1986 el partido más votado fue el *PSOE*, tal y como sucedió en las anteriores elecciones, son también unas elecciones en donde hay únicamente dos partidos mayoritarios, *PSOE* y *Coalición Popular*, ocurre en estas elecciones el mismo escenario que en las anteriores elecciones, en donde el primer partido casi dobla en escaños al segundo partido, aunque en este caso ya se puede apreciar que la diferencia se va reduciendo entre los dos grandes partidos, en general el PSOE alcanza la mayoría absoluta pero en este año si utilizásemos los métodos más proporcionados es interesante observar como perdería la mayoría absoluta tanto utilizando el método Danish como el Sainte-Lague.  
 Este año también reconocemos un partido que podría decirse de nivel de votos medio que queda muy dañado por el método de reparto D´Hondt, es el partido *Centro Democrático y Social*, el cual de utilizar los métodos más proporcionales podría hasta duplicar sus escaños, por ejemplo en el caso de optar por el método Danish.  
 
 ### Desproporción
@@ -1287,11 +1287,11 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
-En estas elecciones de 1989 el partido más votado es, como sucedió el las anteriores elecciones, el *PSOE*, vemos como aparece por primera vez el *Partido Popular* como segunda fuerza tomando el puesto que antes tenía *Coalición Popular*, estas elecciones también son muy bipartidistas aunque se va debilitando ese bipartidismo, ahora podemos decir que hay dos partidos hegemónicos, PSOE y PP, y tres partidos medianos, los cuales serían el Centro Democrático y Social, Izquierda Unida y Convergencia y Unión, de todos estos partidos los más desfavorecidos por la utilización del método D´Hondt son IU y Centro Democrático, los cuales de haber utilizado los métodos más proporcionales podrían hasta duplicar su presencia en el congreso. Por la otra parte en el caso del PSOE pasaría de alcanzar la mayoría absoluta justa con 175 escaños a perder la mayoría absoluta en el caso de optar por los métodos más proporcionales.
+En estas elecciones de 1989 el partido más votado es, como sucedió en las anteriores elecciones, el *PSOE*, vemos como aparece por primera vez el *Partido Popular* como segunda fuerza tomando el puesto que antes tenía *Coalición Popular*, estas elecciones también son muy bipartidistas aunque se va debilitando ese bipartidismo, ahora podemos decir que hay dos partidos hegemónicos, PSOE y PP, y tres partidos medianos, los cuales serían el Centro Democrático y Social, Izquierda Unida y Convergencia y Unión, de todos estos partidos los más desfavorecidos por la utilización del método D´Hondt son IU y Centro Democrático, los cuales de haber utilizado los métodos más proporcionales podrían hasta duplicar su presencia en el congreso. Por la otra parte en el caso del PSOE pasaría de alcanzar la mayoría absoluta justa con 175 escaños a perder la mayoría absoluta en el caso de optar por los métodos más proporcionales.
 
 ### Desproporción
 ```{r}
@@ -1418,7 +1418,7 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
@@ -1542,18 +1542,18 @@ hemiciclo <- ggplot(fe) +
   scale_fill_manual(values = 1 + seq_len(length(fe[fe$Metodo == "D´Hondt", ]$Partidos)), labels = fe[fe$Metodo == "D´Hondt", ]$Partidos) +
   coord_fixed() +
   theme_void() +
-  labs(title = "Asientos según el método de reparto", subtitle = "En los partidos más votados", caption = "Elaboración propia: Angel González", x = NULL, y = NULL) +
+  labs(title = "Asientos según el método de reparto", subtitle = "En los partidos más votados", caption = "Elaboración propia: Ángel González", x = NULL, y = NULL) +
   facet_wrap(Metodo ~ .) +
   theme(
     legend.position = c(0.7, 0.1),
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
-En estas elecciones de 1996 son las primeras elecciones en donde el *PP* es la fuerza más votada, el *PSOE* que ya llevaba una tendencia descendiente a lo largo de las últimas elecciones al final pierde el primer puesto a favor del *PP*. Sigue presentandose un bipartidismo significativo, seguidamente de dos partidos medianos, todavía el PP a pesar de ganar las elecciones no alcanza la mayoría absoluta en ninguno de los métodos analizados. Izquierda Unida sigue siendo el partido más castigado, podría duplicar el número de escaños de haber escogido otro método más proporcional.
+En estas elecciones de 1996 son las primeras elecciones en donde el *PP* es la fuerza más votada, el *PSOE* que ya llevaba una tendencia descendiente a lo largo de las últimas elecciones al final pierde el primer puesto a favor del *PP*. Sigue presentándose un bipartidismo significativo, seguidamente de dos partidos medianos, todavía el PP a pesar de ganar las elecciones no alcanza la mayoría absoluta en ninguno de los métodos analizados. Izquierda Unida sigue siendo el partido más castigado, podría duplicar el número de escaños de haber escogido otro método más proporcional.
 
 ### Desproporción
 ```{r}
@@ -1682,11 +1682,11 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
-En las elecciones del año 2000 el partido más votado vuelve a ser el *Partido Popular* seguido del *PSOE* .En estas elecciones, según el método D´Hondt utilizado en España el *PP* conseguiría una mayoría absoluta holgada, es una elección con un claro bipartidismo donde se podría decir que no existen partidos medianos. 
+En las elecciones del año 2000 el partido más votado vuelve a ser el *Partido Popular* seguido del *PSOE*. En estas elecciones, según el método D´Hondt utilizado en España el *PP* conseguiría una mayoría absoluta holgada, es una elección con un claro bipartidismo donde se podría decir que no existen partidos medianos. 
 Si optásemos por otro método de reparto más proporcional como puede ser el método Danish o el Sainte-Lague el PP alcanzaría la mayoría absoluta o se quedaría a muy pocos escaños de alcanzarla, en cambio veríamos a muchos partidos pequeños con menos de tres votos casi duplicar su presencia en escaños. El partido más castigado por utilizar el método D´Hondt en estas elecciones sigue siendo Izquierda Unida.
 
 ### Desproporción
@@ -1813,12 +1813,12 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
 En estas elecciones del año 2004 volvemos a ver unas elecciones con un claro bipartidismo y con una diferencia de escaños entre partidos cada vez menor, en estas elecciones el partido más votado cambia y el *PSOE* obtiene los mayores votos, seguido del *PP* que pierde la mayoría absoluta según D´Hont que tenía en las anteriores elecciones. 
-En ningún método el *PSOE* alcanzaría la mayoría absoluta por lo que deberá de realizar alianzas con otros partidos para así alcanzar la mayoría absoluta. En el caso de optar por los métodos mas proporcionales resultaría en una reducción muy significativa de la diferencia de escaños entre partidos que pasaría de una diferencia de 16 escaños a 6 escaños en el caso de optar por el método Danish. El partido más castigado por el método D´Hondt es *Izquierda Unida*, que hasta podría ver duplicado o triplicado su presencia en el congreso si se opta por utilizar un método de reparto más proporcional.
+En ningún método el *PSOE* alcanzaría la mayoría absoluta por lo que deberá de realizar alianzas con otros partidos para así alcanzar la mayoría absoluta. En el caso de optar por los métodos más proporcionales resultaría en una reducción muy significativa de la diferencia de escaños entre partidos que pasaría de una diferencia de 16 escaños a 6 escaños en el caso de optar por el método Danish. El partido más castigado por el método D´Hondt es *Izquierda Unida*, que hasta podría ver duplicado o triplicado su presencia en el congreso si se opta por utilizar un método de reparto más proporcional.
 
 ### Desproporción
 ```{r}
@@ -1856,7 +1856,7 @@ ggplot(Disproporc, aes(reorder(m, -c), c)) +
 ```
 
 Según el gráfico por comunidades se sigue la tónica general de las anteriores elecciones, únicamente podemos apreciar en estas elecciones una reducción de la desproporción entre comunidades, es decir, una menor diferencia de desproporción entre ellas. Siguen dos grupos con comportamiento similar, un grupo donde se encuentran los métodos Adams, Huntington-Hill y LR-Imperiali, y en otro grupo los restantes.
-En el caso de agrupar la desproporción por métodos observamos que este año el método más desproporcionado es el Huntington-Hill, mientras que en la parte de los métodos mas proporcionados el método mejor sería el LR-Imperiali, LR-Hare y Sainte-Lague. El método D´Hondt utilizado en España sigue siendo un método que se encuentra en un nivel medio, sin destacar por una desproporción alta ni baja entre todos los métodos.
+En el caso de agrupar la desproporción por métodos observamos que este año el método más desproporcionado es el Huntington-Hill, mientras que en la parte de los métodos más proporcionados el método mejor sería el LR-Imperiali, LR-Hare y Sainte-Lague. El método D´Hondt utilizado en España sigue siendo un método que se encuentra en un nivel medio, sin destacar por una desproporción alta ni baja entre todos los métodos.
 
 
 
@@ -1944,12 +1944,12 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
 En estos comicios del año 2008 no hay diferencias significativas en términos de escaños, sigue un claro bipartidismo con dos partidos hegemónicos, en primer lugar el más votado en estas elecciones que sigue siendo el *PSOE* seguido por el *PP*, la diferencia de escaños entre ellos continúa siendo prácticamente la misma pero en este año el bipartidismo es cada vez más pronunciado, aumentando ambos partidos su presencia en el congreso.
-Para el partido más votado únicamente en dos casos podría obtener la mayoría absoluta, que sería en el caso de optar por el método Imperiali, una mayoría absoluta justa al llegar sólo a los 175 escaños o bien por el métodos LR-Imperiali que alcanzaría los 180 escaños. 
+Para el partido más votado únicamente en dos casos podría obtener la mayoría absoluta, que sería en el caso de optar por el método Imperiali, una mayoría absoluta justa al llegar sólo a los 175 escaños o bien por el método LR-Imperiali que alcanzaría los 180 escaños. 
 Utilizando los métodos de reparto más proporcionales como son el Danish y el Sainte-Lague la diferencia entre los partidos más votados se reduciría a la vez que obtendrían un menor número de escaños, el partido más perjudicado sigue siendo Izquierda Unida que podría hasta más que quintuplicar su presencia en el congreso de haber optado por el método Danish.
 
 ### Desproporción
@@ -1987,8 +1987,8 @@ ggplot(Disproporc, aes(reorder(m, -c), c)) +
   guides(fill = "none")
 ```
 
-Este es un año que se puede observar una mayor igualdad en el caso de las desproporciones, las comunidades no tienen una gran diferencia de proporcionalidad entre ellas sin contar con las habituales de Ceuta y Melilla, además no encontramos grandes diferencias entre los métodos.  
-Si observamos la gráfica de la desproporción según el método de reparto, el método más despropocionado es el Imperiali, seguido por los métodos Adams y Huntington-Hill respectivamente. Todos los demás métodos están en un mismo nivel, el mejor método en estas elecciones es el método LR-Imperiali, que presenta una muy baja desproporción respecto a los demás métodos. El método D´Hont utilizado en España no presenta diferencias y se encuentra en un nivel medio-alto de desproporción entre todos los métodos analizados.
+Este es un año en el que se puede observar una mayor igualdad en el caso de las desproporciones, las comunidades no tienen una gran diferencia de proporcionalidad entre ellas sin contar con las habituales de Ceuta y Melilla, además no encontramos grandes diferencias entre los métodos.  
+Si observamos la gráfica de la desproporción según el método de reparto, el método más despropocionado es el Imperiali, seguido por los métodos Adams y Huntington-Hill. Todos los demás métodos están en un mismo nivel, el mejor método en estas elecciones es el método LR-Imperiali, que presenta una muy baja desproporción respecto a los demás métodos. El método D´Hont utilizado en España no presenta diferencias y se encuentra en un nivel medio-alto de desproporción entre todos los métodos analizados.
 
 ## Año 2011
 
@@ -2075,7 +2075,7 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
@@ -2207,12 +2207,12 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
-En estas elecciones del 2014 observamos que el bipartidismo que veíamos omnipresente en todas las elecciones anteriores ahora ya no ocurre, es el primer año en el que se puede afirmar que ya no hay un bipartidismo claro.
-El partido más votado es el *Partido Popular* seguido por el *PSOE*, pero ya vemos que este año aparecen dos nuevos partidos medianos, que son *Podemos* y *Ciudadanos.* El partido más votado no obtiene la mayoría absoluta en ningún método. Es interesante observar como entre *Podemos* y *Ciudadanos* en el caso de utilizar el método D´Hondt, el primero superaría en dos escaños al segundo, mientras que de haber utilizado el método Danish, *Ciudadanos* superaría a *Podemos* en dos escaños. En el caso de optar por el método Danish, el partido más votado, el *PP*, perdería bastantes escaños y su diferencia respecto al segundo se vería reducida significativamente. En el caso de los partidos medianos verían su presencia en el congreso aumentar levemente pero en ningún caso supondría un cambio significativo. El partido más perjudicado este año vuelve a ser *Izquierda Unida*, que podría pasar de obtener 2 escaños con el método D´Hondt a 11 escaños con el Danish.
+En estas elecciones del 2015 observamos que el bipartidismo que veíamos omnipresente en todas las elecciones anteriores ahora ya no ocurre, es el primer año en el que se puede afirmar que ya no hay un bipartidismo claro.
+El partido más votado es el *Partido Popular* seguido por el *PSOE*, pero ya vemos que este año aparecen dos nuevos partidos medianos, que son *Podemos* y *Ciudadanos.* El partido más votado no obtiene la mayoría absoluta en ningún método. Es interesante observar como entre *Podemos* y *Ciudadanos* en el caso de utilizar el método D´Hondt, el primero superaría en dos escaños al segundo, mientras que de haber utilizado el método Danish, *Ciudadanos* superaría a *Podemos* en dos escaños. En el caso de optar por el método Danish, el partido más votado, el *PP*, perdería bastantes escaños y su diferencia respecto al segundo se vería reducida significativamente. En el caso de los partidos medianos verían aumentar levemente su presencia en el congreso  pero en ningún caso supondría un cambio significativo. El partido más perjudicado este año vuelve a ser *Izquierda Unida*, que podría pasar de obtener 2 escaños con el método D´Hondt a 11 escaños con el Danish.
 
 ### Desproporción
 ```{r}
@@ -2337,13 +2337,13 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
 En las elecciones del año 2016 vemos como se va consolidando el modelo de las anteriores elecciones, con dos grandes partidos y dos partidos medianos. La fuerza política más votada este año es el *Partido Popular* seguido del *PSOE*, en ningún método el *PP* alcanzaría la mayoría absoluta. Son unas elecciones que presentan similares resultados sea cual sea el método de reparto, en el caso de utilizar el método Danish respecto al D´Hondt resultaría en un menor número de escaños para el *PP* y una ligera subida de escaños de *Podemos* y *Ciudadanos*.   
 
-Son las primeras elecciones en donde el método de reparto no cambia significativamente el reparto de escaños, es notorio que en este año el *PSOE* obtenga casi los mismos votos independientemente del método de reparto utilizado.
+Son las primeras elecciones en donde el método de reparto no cambia significativamente el reparto de escaños, es notorio que en este año el *PSOE* obtenga casi los mismos escaños independientemente del método de reparto utilizado.
 
 ### Desproporción
 ```{r }
@@ -2470,7 +2470,7 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
@@ -2514,7 +2514,7 @@ ggplot(Disproporc, aes(reorder(m, -c), c)) +
 
 
 Este es un año en el que viendo la desproporción por comunidades es especialmente similar independientemente del método utilizado. En las ciudades de Ceuta y Melilla es donde encontramos la mayor desproporción, por otra parte la comunidad de Madrid es la provincia más proporcionada.  
-Cuando comparamos la proporcionalidad según el método de reparto sucede algosimilar a las anteriores elecciones, en donde el método Imperiali se encuentra con una diferencia bastante significativa respecto a las demás. El método utilizado en España vuelve a ser uno de los peores, en estas elecciones baja hasta ser el segundo peor en términos de proporcionalidad, es un método que no está preparado para ser óptimo en escenarios en donde no hay un bipartidismo claro.
+Cuando comparamos la proporcionalidad según el método de reparto sucede algo similar a las anteriores elecciones, en donde el método Imperiali se encuentra con una diferencia bastante significativa respecto a las demás. El método utilizado en España vuelve a ser uno de los peores, en estas elecciones baja hasta ser el segundo peor en términos de proporcionalidad, es un método que no está preparado para ser óptimo en escenarios en donde no hay un bipartidismo claro.
 
 
 ## Año 2019, Noviembre
@@ -2601,7 +2601,7 @@ hemiciclo <- ggplot(fe) +
     legend.key.size = unit(.2, "cm"),
     legend.key.width = unit(0.2, "cm"), legend.text = element_text(size = 6, face = "bold")
   )
-hemiciclo
+#hemiciclo
 votos_recap
 ```
 
@@ -2708,7 +2708,7 @@ ggplot(dds[, mean(Desproporción, na.rm = T), by = .(Metodos)], aes(reorder(Meto
   guides(fill = "none")
 ```
 
-En el gráfico de la desproporción según el método de reparto podemos extraer conclusiones para decidir cual método ha sido el mejor a lo largo de todas las elecciones realizadas en España a partir de 1977, por lo tanto sacamos estas conclusiones:  
+En el gráfico de la desproporción según el método de reparto podemos extraer conclusiones para decidir qué método ha sido el mejor a lo largo de todas las elecciones realizadas en España a partir de 1977, por lo tanto sacamos estas conclusiones:  
 
   * El mejor método es el Saint-Lague por parte de los métodos de promedio mayor y por los métodos de resto mayor el mejor método es el LR-Hare, que también es el mejor método entre todos los analizados.
   * El peor método entre todos los analizados es el método Imperiali.
